--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 		<div class="header">
   			<a href="#default" class="logo">Comenzando con la fotografía</a>
   			<div class="header-right">
-    		<a class="active" href="index.html">Inicio</a>
+    		<a class="visited" href="index.html">Inicio</a>
     		<a href="paisajes.html">Paisajes</a>
     		<a href="retratos.html">Retratos</a>
   		</div>
 	</header>
+	<div class="contenido">
 	<div class="centrar">
-		<img src="images/Graduacion.jpeg">
+		<img class="fotindex" src="images/WhatsApp Image 2018-10-14 at 11.17.02 PM.jpeg" width="700">
 	</div>
 	<div class="flexbox-container">
-		<img class="foto1" src="images/36B.jpg" alt="imagen 1">
+		<img class="foto1" src="images/36B.jpg" alt="imagen 1"> 
 	   	<img class="foto2" src="images/the-division-wallpaper-1-1920x1200.jpg" alt="imagen2" title="paisajes">  
 	</div>
+	</div>
+	
 	<footer>
 		<div class="cols">
 			<div class="contacto">
