--- a/paisajes.html
+++ b/paisajes.html
@@ -10,9 +10,9 @@
 		<div class="header">
   			<a href="#default" class="logo">Comenzando con la fotografía</a>
   			<div class="header-right">
-    		<a class="active" href="index.html">Inicio</a>
-    		<a href="paisajes.html">Paisajes</a>
-    		<a href="retratos.html">Retratos</a>
+    		<a  href="index.html">Inicio</a>
+    		<a class="active2" href="paisajes.html">Paisajes</a>
+    		<a class="active3" href="retratos.html">Retratos</a>
   		</div>
 	</header>
 	<div class="centro">
