--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			</div>
 			<div class="termino">
 				<h2>Término</h2>
+				<h4>Nuestra Empresa se dirige aquellas personas que desean un sitio web estable</h4>
 			</div>
 			<div class="redessociales">
 				<h2>Redes Sociales</h2>
