--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	</header>
 	<div class="contenido">
 	<div class="centrar">
-		<img class="fotindex" src="images/WhatsApp Image 2018-10-14 at 11.17.02 PM.jpeg" width="700">
+			<img class="fotindex" src="images/WhatsApp Image 2018-10-14 at 11.17.02 PM.jpeg" width="50%">
 	</div>
 	<div class="flexbox-container">
-		<img class="foto1" src="images/36B.jpg" alt="imagen 1"> 
-	   	<img class="foto2" src="images/the-division-wallpaper-1-1920x1200.jpg" alt="imagen2" title="paisajes">  
+		<img class="foto1" src="images/36B.jpg" alt="imagen 1" width="50%"> 
+	   	<img class="foto2" src="images/the-division-wallpaper-1-1920x1200.jpg" alt="imagen2" title="paisajes" width="50%">  
 	</div>
 	</div>
 	
