--- a/paisajes.html
+++ b/paisajes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Paisajes</title>
+	<title>Comenzando con la fotografía</title>
 	<link rel="stylesheet" type="text/css" href="css/stilo.css">
 </head>
 <body>
@@ -18,24 +18,24 @@
 	<div class="centro">
 		<div class="column">
 		<div class="fot1">
-			<img class="" src="images/paisaje1.webp" alt="imagen 1" width="400">
+			<img class="" src="images/paisaje1.webp" alt="imagen 1" width="100%">
 		</div>
 		<div class="fot2">
-			<img class="" src="images/los_paisajes_naturales_mas_extraordinarios_de_asia_.jpg" alt="imagen 2" width="400">
+			<img class="" src="images/los_paisajes_naturales_mas_extraordinarios_de_asia_.jpg" alt="imagen 2" width="100%">
 		</div>
 		<div class="fot3">
-			<img class="" src="images/maxresdefault.jpg" alt="imagen 3" width="400">
+			<img class="" src="images/maxresdefault.jpg" alt="imagen 3" width="100%">
 		</div>
 	</div>
 	<div class="column">
 		<div class="fot4">
-			<img class="" src="images/playa.jpeg" alt="imagen 4" width="400">
+			<img class="" src="images/playa.jpeg" alt="imagen 4" width="100%">
 		</div>
 		<div class="fot5">
-			<img class="" src="images/camporosas.jpg" alt="imagen 5" width="400">
+			<img class="" src="images/camporosas.jpg" alt="imagen 5" width="100%">
 		</div>
 		<div class="fot6">
-			<img class="" src="images/maxresdefault.jpg" alt="imagen 6" width="400">
+			<img class="" src="images/maxresdefault.jpg" alt="imagen 6" width="100%">
 		</div>
 	</div>
 	</div>
