--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,user-scalable=no">
-	<title></title>
+	<title>Comenzando con la fotografía</title>
 	<link rel="stylesheet" type="text/css" href="css/stilo.css">
 </head>
 <body>
