--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<title>Comenzando con la fotografía</title>
 	<link rel="stylesheet" type="text/css" href="css/stilo.css">
 </head>
-<body>
+<body class="hidden">
+	<div class="centrado" id="onload">
+		<div class="preloader"></div>
+	</div>
 	<header>
 		<div class="header">
   			<a href="#default" class="logo">Comenzando con la fotografía</a>
@@ -51,5 +54,7 @@
 		</div>
 	</footer>
 </div> 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="javascripts/codigo.js"></script>
 </body>
 </html>
