--- a/paisajes.html
+++ b/paisajes.html
@@ -5,14 +5,17 @@
 	<title>Comenzando con la fotografía</title>
 	<link rel="stylesheet" type="text/css" href="css/stilo.css">
 </head>
-<body>
+<body class="hidden">
+	<div class="centrado" id="onload">
+		<div class="preloader"></div>
+	</div>
 	<header>
 		<div class="header">
   			<a href="#default" class="logo">Comenzando con la fotografía</a>
   			<div class="header-right">
     		<a  href="index.html">Inicio</a>
     		<a class="active2" href="paisajes.html">Paisajes</a>
-    		<a class="active3" href="retratos.html">Retratos</a>
+    		<a class="" href="retratos.html">Retratos</a>
   		</div>
 	</header>
 	<div class="centro">
@@ -65,5 +68,7 @@
 			</div>
 		</div>
 	</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="javascripts/codigo.js"></script>
 </body>
 </html>
